--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,12 @@ body {
 }
 
 .sr-only {
-position: absolute;
-left: -10000px;
-top: auto;
-width: 1px;
-height: 1px;
-overflow: hidden;
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
 }
 
 main {
@@ -96,6 +96,7 @@ button {
     font-weight: 700;
     cursor: pointer;
     background-color: rgb(160, 118, 63);
+    color: #ffffff;
 }
 
 button:hover {
